--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title> Home </title>
 </head>
 <body>
-    <p> ini adalah teks </p>
+    <section class="mt-36">
+        <div class="flex flex-wrap">
+            
+        </div>
+    </section>
 </body>
 </html>
