--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,15 @@
     <title> Home </title>
 </head>
 <body>
-    <section class="mt-36">
+    <section class="pt-36">
         <div class="flex flex-wrap">
-            
+            <div class="w-full self-center px-4">
+                <h2 class="font-semibold text-lg text-primary "> Selamat </h2>
+                <h1 class="font-bold text-4xl mb-2"> Datang </h1>
+                <h2> Bpk Abdullah </h2>
+            </div>
         </div>
     </section>
+<script src="https://cdn.tailwindcss.com"></script>
 </body>
 </html>
