konfigurasi tailwindcss ke 2

--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,17 @@
     <title> Home </title>
 </head>
 <body>
+    <!-- hero section start -->
     <section class="pt-36">
         <div class="flex flex-wrap">
             <div class="w-full self-center px-4">
-                <h2 class="font-semibold text-lg text-primary "> Selamat </h2>
+                <h2 class="font-semibold text-xl text-primary "> Selamat </h2>
                 <h1 class="font-bold text-4xl mb-2"> Datang </h1>
-                <h2> Bpk Abdullah </h2>
+                <h2 class="font-semibold text-base text-secondary"> Bpk Abdullah </h2>
             </div>
         </div>
     </section>
+    <!-- hero section end -->
 <script src="https://cdn.tailwindcss.com"></script>
 </body>
 </html>
