--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,73 @@
     <title> Home </title>
 </head>
 <body>
+    <!-- header section start -->
+    <header id="home" class="bg-transparent fixed top-0 left-0 w-full flex items-center z-10 bg-white bg-opacity-90">
+        <div class="container">
+            <div class="flex items-center justify-between relative ">
+                <div class="px-4">
+                    <a href="#home" class="font-bold text-base text-primary block py-6 lg:text-lg">
+                        <span>APLIKASI</span>
+                        <span>PENGOLAH NILAI</span>
+                    </a>
+                </div>
+                <div class="flex items-center px-4 ">
+                    <button id="hamburger" name="hamburger" type="button" class="block absolute right-4 lg:hidden">
+                        <span class="hamburger-line transition duration-300 ease-in-out origin-top-left"></span>
+                        <span class="hamburger-line transition duration-300 ease-in-out "></span>
+                        <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-left"></span>
+                    </button>
+
+                    <nav id="nav-menu" class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:rounded-none lg:shadow-none lg:max-w-full">
+                        <ul class="block lg:flex">
+                            <li class="group">
+                                <a href="#home" class="text-base py-2 mx-8 flex  group-hover:text-primary">Beranda</a>
+                            </li>
+                            <li class="group">
+                                <a href="#about" class="text-base py-2 mx-8 flex  group-hover:text-primary">About</a>
+                            </li>
+                            <li class="group">
+                                <a href="#portfolio" class="text-base py-2 mx-8 flex  group-hover:text-primary">Portfolio</a>
+                            </li>
+                            <li class="group">
+                                <a href="#client" class="text-base py-2 mx-8 flex  group-hover:text-primary">Clients</a>
+                            </li>
+                            <li class="group">
+                                <a href="#blog" class="text-base py-2 mx-8 flex  group-hover:text-primary">Blog</a>
+                            </li>
+                            <li class="group">
+                                <a href="#contact" class="text-base py-2 mx-8 flex  group-hover:text-primary">Contact</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- header section end -->
     <!-- hero section start -->
     <section class="pt-36">
-        <div class="flex flex-wrap">
-            <div class="w-full self-center px-4">
-                <h2 class="font-semibold text-xl text-primary "> Selamat </h2>
-                <h1 class="font-bold text-4xl mb-2"> Datang </h1>
-                <h2 class="font-semibold text-base text-secondary"> Bpk Abdullah </h2>
+        <div class="flex flex-wrap mb-[61px] lg:mb-24">
+            <div class="w-full self-center px-4 lg:w-1/2 lg:pl-20">
+                <h2 class="font-semibold text-xl text-primary lg:text-2xl"> Selamat </h2>
+                <h1 class="font-bold text-5xl mb-2 lg:text-6xl"> Datang </h1>
+                <h2 class="font-semibold text-base text-secondary lg:text-lg"> Bpk Abdullah </h2>
+            </div>
+            <div class="w-full px-4 sefl-center flex justify-center flex-wrap lg:w-1/2 lg:justify-evenly">
+                <div class="w-[214px] h-[176px] border-[0.5px] rounded-[21px] mt-[61px] border-black shadow-2xl"></div>
+                <div class="w-[214px] h-[176px] border-[0.5px] rounded-[21px] mt-[61px] border-black shadow-2xl"></div>
             </div>
         </div>
     </section>
     <!-- hero section end -->
+    <!-- footer section start -->
+    <footer>
+        <div class="bg-dark w-[375px] h-[266px] lg:w-full">
+            
+        </div>
+    </footer>
+    <!-- footer section end -->
 <script src="https://cdn.tailwindcss.com"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
