--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
         </div>
     </header>
     <!-- header section end -->
+
     <!-- hero section start -->
     <section class="pt-36">
         <div class="flex flex-wrap mb-[61px] lg:mb-24">
@@ -61,12 +62,13 @@
                 <h2 class="font-semibold text-base text-secondary lg:text-lg"> Bpk Abdullah </h2>
             </div>
             <div class="w-full px-4 sefl-center flex justify-center flex-wrap lg:w-1/2 lg:justify-evenly">
-                <div class="w-[214px] h-[176px] border-[0.5px] rounded-[21px] mt-[61px] border-black shadow-2xl"></div>
-                <div class="w-[214px] h-[176px] border-[0.5px] rounded-[21px] mt-[61px] border-black shadow-2xl"></div>
+                <div class="w-[214px] h-[176px] border-[0.5px] rounded-[21px] mt-[61px] border-black shadow-xl"></div>
+                <div class="w-[214px] h-[176px] border-[0.5px] rounded-[21px] mt-[61px] border-black shadow-xl"></div>
             </div>
         </div>
     </section>
     <!-- hero section end -->
+
     <!-- footer section start -->
     <footer>
         <div class="bg-dark w-[375px] h-[266px] lg:w-full">
