update halaman home

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                         <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-left"></span>
                     </button>
 
-                    <nav id="nav-menu" class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:rounded-none lg:shadow-none lg:max-w-full">
+                    <nav id="nav-menu" class="scale-0 absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:scale-100 lg:block lg:static lg:bg-transparent lg:rounded-none lg:shadow-none lg:max-w-full transition duration-300 ease-in-out">
                         <ul class="block lg:flex">
                             <li class="group">
                                 <a href="#home" class="text-base py-2 mx-8 flex  group-hover:text-primary">Beranda</a>
@@ -65,18 +65,19 @@
                 <div class="w-[214px] h-[176px] border-[0.5px] rounded-[21px] mt-[61px] border-black shadow-xl"></div>
                 <div class="w-[214px] h-[176px] border-[0.5px] rounded-[21px] mt-[61px] border-black shadow-xl"></div>
             </div>
-        </div>
+         </div>
     </section>
     <!-- hero section end -->
 
     <!-- footer section start -->
-    <footer>
-        <div class="bg-dark w-[375px] h-[266px] lg:w-full">
+    <footer class="w-full">
+        <div class="bg-dark w-96 h-[266px] md:w-full lg:w-full">
             
         </div>
     </footer>
     <!-- footer section end -->
 <script src="https://cdn.tailwindcss.com"></script>
+<script src="js/jquery.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
