--- a/public/input-kelas.html
+++ b/public/input-kelas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title> Home </title>
+    <title> Kelas </title>
 </head>
 <body>
     <!-- header section start -->
@@ -58,13 +58,14 @@
         <div class="container">
             <div class="flex flex-wrap mb-[61px] lg:mb-24">
                 <div class="w-full self-center px-4 lg:w-1/2 lg:pl-20">
-                    <h2 class="font-semibold text-xl text-primary lg:text-2xl"> Selamat </h2>
-                    <h1 class="font-bold text-5xl mb-2 lg:text-6xl"> Datang </h1>
-                    <h2 class="font-semibold text-base text-secondary lg:text-lg"> Bpk Abdullah </h2>
+                    <h2 class="font-semibold text-xl text-primary lg:text-2xl"> List </h2>
+                    <h1 class="font-bold text-5xl mb-2 lg:text-6xl"> Kelas </h1>
                 </div>
-                <div class="w-full px-4 sefl-center flex justify-center flex-wrap lg:w-1/2 lg:justify-evenly">
-                    <div class="w-[214px] h-[176px] border-[0.5px] rounded-[21px] mt-[61px] border-black shadow-xl hover:scale-110 transition duration-300 ease-in-out"></div>
-                    <div class="w-[214px] h-[176px] border-[0.5px] rounded-[21px] mt-[61px] border-black shadow-xl hover:scale-110 transition duration-300 ease-in-out"></div>
+                <div class="w-full self-center px-4 mt-20 md:w-1/2 lg:w-1/2">
+                    <p class="text-center text-[13px] opacity-60">" Belum ada kelas yang ditambahkan "</p>
+                    <div class="flex justify-center">
+                        <a href="#" class="flex justify-center items-center mt-20 text-center w-[246px] h-[47px] bg-primary rounded-full shadow-lg"><span class="font-bold text-white">TAMBAH KELAS</span></a>
+                    </div>
                 </div>
              </div>
         </div>
