--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,13 @@
                     <nav id="nav-menu" class="scale-0 absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:scale-100 lg:block lg:static lg:bg-transparent lg:rounded-none lg:shadow-none lg:max-w-full transition duration-300 ease-in-out">
                         <ul class="block lg:flex">
                             <li class="group">
-                                <a href="#home" class="text-base py-2 mx-8 flex  group-hover:text-primary">Beranda</a>
+                                <a href="index.html" class="text-base py-2 mx-8 flex  group-hover:text-primary">Beranda</a>
                             </li>
                             <li class="group">
-                                <a href="#about" class="text-base py-2 mx-8 flex  group-hover:text-primary">About</a>
+                                <a href="input-kelas.html" class="text-base py-2 mx-8 flex  group-hover:text-primary">Kelas</a>
                             </li>
                             <li class="group">
-                                <a href="#portfolio" class="text-base py-2 mx-8 flex  group-hover:text-primary">Portfolio</a>
+                                <a href="input-siswa.html" class="text-base py-2 mx-8 flex  group-hover:text-primary">Siswa</a>
                             </li>
                             <li class="group">
                                 <a href="#client" class="text-base py-2 mx-8 flex  group-hover:text-primary">Clients</a>
