--- a/public/input-siswa.html
+++ b/public/input-siswa.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title> Kelas </title>
+    <title> Siswa    </title>
 </head>
 <body>
     <!-- header section start -->
@@ -59,12 +59,13 @@
             <div class="flex flex-wrap mb-[61px] lg:mb-24">
                 <div class="w-full self-center px-4 lg:w-1/2 lg:pl-20">
                     <h2 class="font-semibold text-xl text-primary lg:text-2xl"> List </h2>
-                    <h1 class="font-bold text-5xl mb-2 lg:text-6xl"> Kelas </h1>
+                    <h1 class="font-bold text-5xl mb-2 lg:text-6xl"> Siswa </h1>
+                    <h2 class="font-semibold text-base text-secondary lg:text-lg"> Kelas IX A </h2>
                 </div>
                 <div class="w-full self-center px-4 mt-20 md:w-1/2 lg:w-1/2">
-                    <p class="text-center text-[13px] opacity-60">" Belum ada kelas yang ditambahkan "</p>
+                    <p class="text-center text-[13px] opacity-60">" Belum ada Siswa yang ditambahkan "</p>
                     <div class="flex justify-center">
-                        <a href="#" class="flex justify-center items-center mt-20 text-center w-[246px] h-[47px] bg-primary rounded-full shadow-lg shadow-slate-300"><span class="font-bold text-white">TAMBAH KELAS</span></a>
+                        <a href="#" class="flex justify-center items-center mt-20 text-center w-[246px] h-[47px] bg-primary rounded-full shadow-lg shadow-slate-300"><span class="font-bold text-white">TAMBAH SISWA</span></a>
                     </div>
                 </div>
              </div>
