--- a/public/input-kelas.html
+++ b/public/input-kelas.html
@@ -64,7 +64,7 @@
                 <div class="w-full self-center px-4 mt-20 md:w-1/2 lg:w-1/2">
                     <p class="text-center text-[13px] opacity-60">" Belum ada kelas yang ditambahkan "</p>
                     <div class="flex justify-center">
-                        <a href="#" class="flex justify-center items-center mt-20 text-center w-[246px] h-[47px] bg-primary rounded-full shadow-lg shadow-slate-300"><span class="font-bold text-white">TAMBAH KELAS</span></a>
+                        <a href="#" class="font-bold text-white flex justify-center items-center mt-20 text-center w-[246px] h-[47px] bg-primary rounded-full shadow-lg shadow-slate-300 hover:scale-110 transition duration-300">TAMBAH KELAS</a>
                     </div>
                 </div>
              </div>
