--- a/public/input-kelas.html
+++ b/public/input-kelas.html
@@ -77,7 +77,7 @@
         <div class="w-full bg-slate-200 self-center absolute p-5 rounded-xl shadow-2xl flex justify-center">
             <img src="img/close.svg" alt="..." class="absolute right-3 top-3 cursor-pointer w-[20px] lg:w-[25px]" id="close-modal-box">
             <form action="" class="w-full px-8">
-                <h2 class="font-bold mb-3 text-primary ">TAMBAH KELAS</h2>
+                <h2 class="font-semibold mb-3 text-primary lg:font-bold">TAMBAH KELAS</h2>
                 <label for="name" class="w-full font-semibold text-dark mb-3 block text-lg">Nama</label>
                 <input type="text" name="name" class="w-full outline-none rounded-xl py-1 px-4 focus:ring-1 focus:ring-primary focus:border-primary focus:border text-primary block" autocomplete="off">
             </form>
